# python-ansel

./: .flake8  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml  python-package.yml
ansel/: __init__.py  codec.py  incremental.py
ansel/encodings/: ansel.py  gedcom.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: conftest.py  test_ansel.py  test_codec.py  test_gedcom.py  test_incremental.py
