[tool.poetry]
name = "ansel"
version = "0.2.0"
description = "Codecs for reading/writing documents in the ANSEL character set."
authors = ["David Haney <david.haney@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/haney/python-ansel/"
documentation = "https://python-ansel.readthedocs.io/"
keywords = ["ansel", "gedcom"]
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "Natural Language :: English",
]
packages = [
    { include = "ansel" },
]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pyfakefs = "^4.5.6"
pytest = "^7"
Sphinx = {version = "^4.3.2"}
sphinx-rtd-theme = {version = "<1"}
isort = "^5.10.1"

[tool.poetry.extras]
docs = ["Sphinx", "shpinx-rtd-theme"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
