[tool.poetry]
name = "ansel"
version = "1.0.0"
description = "Codecs for reading/writing documents in the ANSEL character set."
authors = ["David Haney <david.haney@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/haney/python-ansel/"
documentation = "https://python-ansel.readthedocs.io/"
keywords = ["ansel", "gedcom"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "Natural Language :: English",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
]
packages = [
    { include = "ansel" },
]

[tool.poetry.dependencies]
python = "^3.6.2"
Sphinx = { version = "*", optional = true }
sphinx-rtd-theme = { version = "<1", optional = true }

[tool.poetry.dev-dependencies]
black = { version = "*", python = ">=3.7" }
flake8 = { version = "*", python = ">=3.7" }
isort = { version = "*", python = ">=3.7" }
pyfakefs = "*"
pytest = "*"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
